--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@loopback/rest-explorer": "^6.1.2",
     "@loopback/service-proxy": "^6.1.2",
     "cookie": "^0.6.0",
+    "loopback-connector-postgresql": "^7.0.0",
     "tslib": "^2.0.0",
     "uuid": "^9.0.1"
   },
